# hello-python

./: Pipfile  README.md  arrays.py  data_fitting.py  hmm.py  k_means.py  lists.py  loops.py  math.py  nearest_neighbor.py  np.py  objects.py  pyproject.toml  quicksort.py  sets.py  types.py
