[tool.poetry]
name = "hello-python"
version = "0.1.0"
description = ""
authors = ["Amila Welihinda <amilajack@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.17"
hmmlearn = "^0.2.2"
matplotlib = "^3.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
